# learning

./: .gitignore  README.md  pyproject.toml
notebooks/jax/: basics.ipynb  jit.ipynb
notebooks/numpy/: logistic_regression.ipynb  numpy_practice.ipynb
notebooks/pytorch/: loading_data.ipynb  state_dict.ipynb
notebooks/reco/: retrieval.ipynb  retrieval.py
