[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Mike Czech <zenscr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "^1.26.2"
jupyterlab = "^4.0.9"
polars = "^0.19.19"
jax = {extras = ["cpu"], version = "^0.4.23"}
matplotlib = "^3.8.2"
pandas = "^2.1.4"
torch = "^2.1.2"
scikit-learn = "^1.4.0"
torchtext = "^0.16.2"
black = "^23.12.1"
torchaudio = "^2.1.2"
skorch = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
